k3s/manifests/pod-con-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-con-db
  namespace: produccion
spec:
  serviceAccountName: webapp-sa
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    fsGroup: 1000   # <-- permisos de grupo al usuario 1000 sobre los volúmenes
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: busybox:latest
      command: ['sleep', '3600']
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
      volumeMounts:
        - name: db-secret-vol
          mountPath: /run/secrets/db
          readOnly: true
        - name: tmp-vol
          mountPath: /tmp
  volumes:
    - name: db-secret-vol
      secret:
        secretName: db-credentials
        defaultMode: 0400 # accesible ahora por el fsGroup
    - name: tmp-vol
      emptyDir: {}
